Corrected checkstyle